clang/test/BSC/Negative/Trait/GenericTrait/void_trait/void_trait.cbs
// RUN: %clang_cc1 -fsyntax-only -verify %s

// ISSUE I8MNW7 68.cbs
trait T{
    inline void f(volatile This *this, int a);
    void print(This *this);
};

void void::f(void *this, int a) {   // expected-error {{variable has incomplete type 'void'}}
    return *this;
}

void void::print(void *this) {  // expected-error {{variable has incomplete type 'void'}}
    return;
}

impl trait T for void;  // expected-error {{function 'f' in 'trait T' is not implemented for 'void'}}

int main()
{
    void a = 1; // expected-error {{variable has incomplete type 'void'}}
    void b = 2; // expected-error {{variable has incomplete type 'void'}}
    ((trait T*)&a)->f();
    return 0;
}
